# rust-on-azure-container-apps

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  README.md  azure.yaml  sample.env
.devcontainer/: devcontainer.json
.github/workflows/: build-and-deploy.yaml
http/: get-404.http  get-api.http  get-root.http
infra/: main.bicep  main.parameters.json
scripts/: azd-provision-with-environment.sh  create-github-azure-credentials.sh  get-url.sh  stream-logs.sh
src/: main.rs
