[package]
name = "rust-aca-azd-port-3000"
version = "1.0.0"
edition = "2021"
publish = false

[dependencies]
anyhow = "1.0.95"
axum = { version = "0.8.1", features = ["macros"] }
axum-extra = { version = "0.10.0", features = ["typed-header"] }
dotenvy = "0.15.0"
http = "1.1.0"
http-body-util = "0.1.0"
http-serde-ext = "1.0.2"
serde = { version = "1.0.208", features = ["derive"] }
serde_derive = "1.0.209"
serde_json = "1.0.127"
tokio = { version = "1.0", features = ["full"] }
tower = "0.5.0"
tower-http = { version = "0.6.2", features = ["cors", "catch-panic", "sensitive-headers", "trace"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[[bin]]
name = "server"
path = "src/main.rs"
